raw/inflate-0.1.0--2016-12-05-19-47-36--0.log
commit 09991241fd75ec69281d06c8f907d2e9f61ac5e2
Merge: daf8c1d c735d7f
Author: bors <bors@rust-lang.org>
Date:   Tue Dec 6 00:17:24 2016 +0000

    Auto merge of #38121 - jonathandturner:better_e0061, r=nikomatsakis
    
    Point arg num mismatch errors back to their definition
    
    This PR updates the arg num errors (like E0061) to point back at the function definition where they were defined.
    
    Before:
    
    ```
    error[E0061]: this function takes 2 parameters but 1 parameter was supplied
      --> E0061.rs:18:7
       |
    18 |     f(0);
       |       ^
       |
       = note: the following parameter types were expected:
       = note: u16, &str
    ```
    
    Now:
    
    ```
    error[E0061]: this function takes 2 parameters but 1 parameter was supplied
      --> E0061.rs:18:7
       |
    11 | fn f(a: u16, b: &str) {}
       | ------------------------ defined here
    ...
    18 |     f(0);
       |       ^ expected 2 parameters
    ```
    
    This is an incremental improvement.  We probably want to underline only the function name and also have support for functions defined in crates outside of the current crate.
    
    r? @nikomatsakis
rustc: ./inflate-0.1.0
cargo rustc  -- -Ztime-passes -Zinput-stats
time: 0.003; rss: 43MB	parsing
Lines of code:             956
Pre-expansion node count:  4736
time: 0.000; rss: 43MB	recursion limit
time: 0.000; rss: 43MB	crate injection
time: 0.000; rss: 43MB	plugin loading
time: 0.000; rss: 43MB	plugin registration
time: 0.058; rss: 75MB	expansion
time: 0.000; rss: 75MB	maybe building test harness
time: 0.000; rss: 75MB	maybe creating a macro crate
Post-expansion node count: 55748
time: 0.000; rss: 75MB	checking for inline asm in case the target doesn't support it
time: 0.000; rss: 75MB	complete gated feature checking
time: 0.002; rss: 75MB	early lint checks
time: 0.000; rss: 75MB	AST validation
time: 0.007; rss: 75MB	name resolution
time: 0.006; rss: 79MB	lowering ast -> hir
time: 0.001; rss: 79MB	indexing hir
time: 0.001; rss: 79MB	attribute checking
time: 0.000; rss: 76MB	language item collection
time: 0.001; rss: 76MB	lifetime resolution
time: 0.000; rss: 76MB	looking for entry point
time: 0.000; rss: 76MB	looking for plugin registrar
time: 0.002; rss: 76MB	region resolution
time: 0.000; rss: 76MB	loop checking
time: 0.000; rss: 76MB	static item recursion checking
time: 0.018; rss: 76MB	compute_incremental_hashes_map
time: 0.000; rss: 76MB	load_dep_graph
time: 0.000; rss: 76MB	stability index
time: 0.001; rss: 76MB	stability checking
time: 0.001; rss: 78MB	type collecting
time: 0.000; rss: 78MB	variance inference
time: 0.000; rss: 78MB	impl wf inference
time: 0.005; rss: 80MB	coherence checking
time: 0.001; rss: 80MB	wf checking
time: 0.002; rss: 80MB	item-types checking
time: 1.585; rss: 88MB	item-bodies checking
time: 0.000; rss: 88MB	drop-impl checking
time: 0.014; rss: 88MB	const checking
time: 0.001; rss: 88MB	privacy checking
time: 0.000; rss: 88MB	intrinsic checking
time: 0.000; rss: 88MB	effect checking
time: 0.002; rss: 88MB	match checking
time: 0.064; rss: 87MB	liveness checking
time: 0.011; rss: 87MB	rvalue checking
time: 0.034; rss: 106MB	MIR dump
  time: 0.007; rss: 106MB	SimplifyCfg
  time: 0.005; rss: 107MB	QualifyAndPromoteConstants
  time: 0.007; rss: 107MB	TypeckMir
  time: 0.000; rss: 107MB	SimplifyBranches
  time: 0.002; rss: 107MB	SimplifyCfg
time: 0.021; rss: 107MB	MIR cleanup and validation
time: 0.196; rss: 107MB	borrow checking
time: 0.000; rss: 107MB	reachability checking
time: 0.002; rss: 107MB	death checking
time: 0.000; rss: 107MB	unused lib feature checking
time: 0.015; rss: 109MB	lint checking
time: 0.000; rss: 109MB	resolving dependency formats
  time: 0.000; rss: 109MB	NoLandingPads
  time: 0.002; rss: 109MB	SimplifyCfg
  time: 0.002; rss: 109MB	EraseRegions
  time: 0.001; rss: 109MB	AddCallGuards
  time: 0.222; rss: 112MB	ElaborateDrops
  time: 0.000; rss: 112MB	NoLandingPads
  time: 0.006; rss: 111MB	SimplifyCfg
  time: 0.003; rss: 111MB	InstCombine
  time: 0.000; rss: 111MB	Deaggregator
  time: 0.000; rss: 111MB	CopyPropagation
  time: 0.003; rss: 111MB	SimplifyLocals
  time: 0.001; rss: 111MB	AddCallGuards
  time: 0.000; rss: 111MB	PreTrans
time: 0.240; rss: 111MB	MIR optimisations
  time: 0.001; rss: 111MB	write metadata
  time: 0.008; rss: 115MB	translation item collection
  time: 0.001; rss: 115MB	codegen unit partitioning
  time: 0.001; rss: 128MB	internalize symbols
time: 0.184; rss: 128MB	translation
time: 0.000; rss: 128MB	assert dep graph
time: 0.000; rss: 128MB	serialize dep graph
  time: 0.027; rss: 93MB	llvm function passes [0]
  time: 0.007; rss: 94MB	llvm module passes [0]
  time: 0.663; rss: 97MB	codegen passes [0]
  time: 0.000; rss: 97MB	codegen passes [0]
time: 0.733; rss: 97MB	LLVM passes
time: 0.000; rss: 97MB	serialize work products
time: 0.019; rss: 85MB	linking
done
